# thesis-CSEC

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  README.md  docker-compose.yaml  generate_dockerfiles.sh  generate_valgrind_dockerfiles.sh  message-passer.h  raft_master_dockerfile  raft_server_dockerfile
cluster-monitor/: CMakeLists.txt  hostfile.txt  main.c
docker-samples/: cluster_monitor_dockerfile  docker-compose.yaml  raft_master_dockerfile  valgrind_base_dockerfile
lib/: CMakeLists.txt  data-op.h  event-list.c  event-list.h  overseer.c  overseer.h  shared-events.c  shared-events.h
lib-csec/: CMakeLists.txt  datatypes.h  elections.c  elections.h  event-list.c  event-list.h  lib-csec.h  overseer.c  overseer.h  p-liveness.c  p-liveness.h  stepdown.c  stepdown.h  timeout.c  timeout.h
lib-csec/expe/: expe-datatypes.h  fuzzer.c  fuzzer.h  killer.c  killer.h  state-monitoring.c  state-monitoring.h
lib-csec/hosts-list/: hl-datatypes.h  hosts-list.c  hosts-list.h
lib-csec/mocked-fs/: data-op.c  data-op.h  mfs-datatypes.h  mocked-fs.c  mocked-fs.h  ops-queue.c  ops-queue.h
lib-csec/raft-comms/: control-message.c  control-message.h  entry-transmission.c  entry-transmission.h  heartbeat.c  heartbeat.h  rc-datatypes.h  retransmission-cache.c  retransmission-cache.h  timeout.c  timeout.h  transmission.c  transmission.h
lib-csec/raft-entry-log/: log-entry.h  log.c  log.h
lib-csec/raft-log/: log.c  log.h  rl-datatypes.h
lib-csec/status/: elections.c  elections.h  master-events.c  master-events.h  p-liveness.c  p-liveness.h  server-events.c  server-events.h  status-datatypes.h
lib/hosts-list/: host.c  host.h  hosts-list.c  hosts-list.h
lib/mocked-fs/: data-op.c  data-op.h  mocked-fs.c  mocked-fs.h
lib/raft-comms/: heartbeat.c  heartbeat.h
lib/raft-entry-log/: CMakeLists.txt  library.h  log-entry.c  log-entry.h  log.c  log.h
lib/raft-log/: library.h
raft-master/: CMakeLists.txt  hostfile.txt  main.c  master-events.c  master-events.h
raft-server/: CMakeLists.txt  hostfile.txt  main.c  server-events.c  server-events.h
